--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -2,3 +2,6 @@
     width: 100%;
     cursor: pointer;
 }
+/* .card:hover {
+    background: url("/src/assets/images/azul/five.png") no-repeat;
+} */
