--- a/src/app/components/footbar/footbar.component.html
+++ b/src/app/components/footbar/footbar.component.html
@@ -1,5 +1,6 @@
 <div id="push"></div>
 <div id="bottom" class="lmn-row lmn-align-items-end lmn-text-color-0">
+    <span class="copy">&copy; Login Citi {{myversion}} | {{ fecha | date:"dd-MM-yyy HH:mm" }}<span></span></span>
     <img id="logociti" alt="Inicio" src="../../../assets/images/citi2.png" />
     <span>&copy; Citigroup.com is the global source of information about and access to financial services provided by the Citigroup Companies</span>
 </div>
