--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -129,9 +129,9 @@
         </div>
         <div class="lmn-row">
           <div class="lmn-col-md-6">
-            <control-input [control]="form.controls['ip']" [controlName]="'ip'"
+            <control-inputip [control]="form.controls['ip']" [controlName]="'ip'"
               [label]="'Dirección IP'" [placeHolder]="''">
-            </control-input>
+            </control-inputip>
           </div>
         </div>
 
